--- a/Compare Numbers/index.html
+++ b/Compare Numbers/index.html
@@ -16,6 +16,6 @@
     <p>Third Number:</p>
     <input id="input3" placeholder="Input a number">
     <br><br>
-    <btn id="btn1">Calculate Max Number</btn>    
+    <button id="btn1">Calculate Max Number</button>
 </body>
 </html>
